--- a/TwitterStats/templates/base.html
+++ b/TwitterStats/templates/base.html
@@ -2,6 +2,17 @@
 <html lang="en">
 {% load staticfiles %}
 <head>
+	<link rel="stylesheet" href="static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="static/css/animate.min.css">
+
+  	<link rel="stylesheet" href="static/css/et-line-font.css">
+	<link rel="stylesheet" href="static/css/font-awesome.min.css">
+
+  	<link rel="stylesheet" href="static/css/vegas.min.css">
+	<link rel="stylesheet" href="static/css/style.css">
+
+	<link href='https://fonts.googleapis.com/css?family=Rajdhani:400,500,700' rel='stylesheet' type='text/css'>
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
     <style media="screen" type="text/css">
@@ -27,19 +38,12 @@
 </head>
 <body>
 <header>
-    <nav>
-        <div class="nav-wrapper teal lighten-2">
-            <a href="/" class="brand-logo center">Senti-Meter</a></div></nav>
+  
 </header>
 <main>
     <br>
     {% block body %}{% endblock %}
 </main>
-<footer class="page-footer teal lighten-2" style="!important;padding-top: 0">
-    <div class="footer-copyright">
-        <div class="container">© 2016 Copyright Kapish
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a></div>
-    </div>
-</footer>
+
 </body>
 </html>
