--- a/TwitterStats/templates/index.html
+++ b/TwitterStats/templates/index.html
@@ -1,17 +1,50 @@
-{% extends 'base.html' %}
-{% block body %}
-    <div class="row">
-        <div id="input_hastag" class="col s12">
-            <form method="get" action="{% url 'analyse' %} ">
-                <div class="input-field col s4 m3 l2 offset-s2 offset-m2 offset-l2">
-                    <label for="{{ input_hastag.q.id_for_label }}">Input Hashtag:</label>
-                    {{ input_hastag.q }}
-                </div>
-                <br>
-                <button class="btn waves-effect waves-light" type="submit">Analyse
-                    <i class="material-icons right">send</i>
-                </button>
-            </form>
-        </div>
-    </div>
+{% extends 'base.html' %} {% block body %}
+<!-- preloader section -->
+<section class="preloader">
+	<div class="sk-circle">
+		<div class="sk-circle1 sk-child"></div>
+		<div class="sk-circle2 sk-child"></div>
+		<div class="sk-circle3 sk-child"></div>
+		<div class="sk-circle4 sk-child"></div>
+		<div class="sk-circle5 sk-child"></div>
+		<div class="sk-circle6 sk-child"></div>
+		<div class="sk-circle7 sk-child"></div>
+		<div class="sk-circle8 sk-child"></div>
+		<div class="sk-circle9 sk-child"></div>
+		<div class="sk-circle10 sk-child"></div>
+		<div class="sk-circle11 sk-child"></div>
+		<div class="sk-circle12 sk-child"></div>
+	</div>
+</section>
+
+<!-- home section -->
+<section id="home">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-12">
+				<div class="home-thumb">
+					<h1 class="wow fadeInUp" style="font-weight: bold;" data-wow-delay="0.8s">Proyecto Machine Learning</h1>
+          			<h3 class="wow fadeInUp" data-wow-delay="0.6s" style="font-weight: bold;"><strong>Seleccione una de las opciones demostracion de </strong>Machine Learning</h3>
+          			<button type="button" class="btn btn-warning">Texto</button>
+        			<button type="button" class="btn btn-warning">Imagenes</button>
+				</div>
+			</div>
+
+		</div>
+	</div>		
+</section>
+
+
+
+
+<!-- javscript js -->
+<script src="static/js/jquery.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
+
+<script src="static/js/vegas.min.js"></script>
+
+<script src="static/js/wow.min.js"></script>
+<script src="static/js/smoothscroll.js"></script>
+<script src="static/js/custom.js"></script>
 {% endblock %}
