--- a/TwitterStats/templates/text_analysis_sentiment/index.html
+++ b/TwitterStats/templates/text_analysis_sentiment/index.html
@@ -26,8 +26,9 @@
 				<div class="home-thumb">
 					<h1 class="wow fadeInUp" style="font-weight: bold;" data-wow-delay="0.8s">Proyecto Machine Learning</h1>
           			<h3 class="wow fadeInUp" data-wow-delay="0.6s" style="font-weight: bold;"><strong>Seleccione una de las opciones demostracion de </strong>Machine Learning</h3>
-          			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Texto</a>
-        			<a href="" type="button" class="btn btn-warning">Imagenes</a>
+          			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Estadisticas</a>
+        			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Demo</a>
+        			<a href="/welcome/" type="button" class="btn btn-warning">Volver</a>
 				</div>
 			</div>
 
