--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -24,11 +24,10 @@
 
 			<div class="col-md-12">
 				<div class="home-thumb">
-					<h1 class="wow fadeInUp" style="font-weight: bold;" data-wow-delay="0.8s">Analisis de Sentimientos</h1>
+					<h1 class="wow fadeInUp" style="font-weight: bold;" data-wow-delay="0.8s">Proyecto Machine Learning</h1>
           			<h3 class="wow fadeInUp" data-wow-delay="0.6s" style="font-weight: bold;"><strong>Seleccione una de las opciones demostracion de </strong>Machine Learning</h3>
-          			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Estadisticas</a>
-        			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Demo</a>
-        			<a href="/welcome/" type="button" class="btn btn-warning">Volver</a>
+          			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Texto</a>
+        			<a href="" type="button" class="btn btn-warning">Imagenes</a>
 				</div>
 			</div>
 
