Primeros pasos en funcionalidad de Análisis de sentimiento

--- a/LearnIA/templates/base.html
+++ b/LearnIA/templates/base.html
@@ -34,7 +34,7 @@
     </script>{% block header %}{% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8">
-    <title>SentiMeter</title>
+    <title>LearnIA</title>
 </head>
 <body>
 	<!-- javscript js -->
@@ -46,6 +46,10 @@
 	<script src="{% static "js/wow.min.js" %}"></script>
 	<script src="{% static "js/smoothscroll.js" %}"></script>
 	<script src="{% static "js/custom.js" %}"></script>
+	
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+	
 <header>
   
 </header>
