--- a/LearnIA/templates/base.html
+++ b/LearnIA/templates/base.html
@@ -20,9 +20,11 @@
             display: flex;
             min-height: 100vh;
             flex-direction: column;
+            font-size: large
         }
         main {
             flex: 1 0 auto;
+            font-size: large
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
