--- a/LearnIA/templates/image.html
+++ b/LearnIA/templates/image.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %} {% block body %}
-
 <div class="text-center">
 	<h1 class="wow fadeInUp" style="margin: 0 auto;">
 		<strong>Parámetros</strong>
@@ -24,39 +23,32 @@
 					type="param" class="form-control" id="exampleInputParam3"
 					placeholder="Parametro3">
 			</div>
+			<div class="input-group mb-3">
+				<label for="Param3">Parametro4</label>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="inputGroupFile01">
+					<label class="custom-file-label" for="inputGroupFile01">Seleccionar archivo</label>
+				</div>
+			</div>
+
 		</div>
+
 		<div class="col-md-6 zero-margin-bottom">
+
 			<div class="form-group">
-				<label for="listPararms">Lista de Parametros</label> <select
-					name="listParams" class="form-control">
-					<option value="">Selecciona Parametros</option>
-					<option value="option1">option1</option>
-					<option value="option2">option1</option>
+				<select title="Pick a number" class="selectpicker">
+					<option>Select...</option>
+					<option>One</option>
+					<option>Two</option>
+					<option>Three</option>
 				</select>
 			</div>
-			<div class="form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">Check me
-					out</label>
-			</div>
 
-		</div>
-		<div class="col-md-12 zero-margin-bottom">
-			<div class="form-group">
-				<label for="comments">Comments:</label>
-				<textarea name="comment" class="form-control" rows="3"></textarea>
-			</div>
-			<button type="submit" class="btn btn-default submit btn-danger">Ejecutar</button>
 		</div>
 	</div>
+	<div class="text-center">
+		<button type="submit" class="btn btn-primary">Ejecutar</button>
+	</div>
 </form>
-</div>
 
 {% endblock %}
-
-<script type="text/javascript">
-	$(document).ready(function() {
-		$('.mdb-select').material_select();
-	});
-</script>
-
