--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -26,8 +26,8 @@
 				<div class="home-thumb">
 					<h1 class="wow fadeInUp" style="font-weight: bold;" data-wow-delay="0.8s">Proyecto Machine Learning</h1>
           			<h3 class="wow fadeInUp" data-wow-delay="0.6s" style="font-weight: bold;"><strong>Seleccione una de las opciones demostracion de </strong>Machine Learning</h3>
-          			<a href="/text_analysis_sentiment/" type="button" class="btn btn-warning">Texto</a>
-        			<a href="/image/" type="button" class="btn btn-warning">Imagenes</a>
+          			<a href="/text/" type="button" class="btn btn-warning">Texto</a>
+        			<a href="/image/" type="button" class="btn btn-warning">Imágenes</a>
 				</div>
 			</div>
 
