--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -1,22 +1,7 @@
-{% extends 'base.html' %} {% block body %}
-<!-- preloader section -->
-<section class="preloader">
-	<div class="sk-circle">
-		<div class="sk-circle1 sk-child"></div>
-		<div class="sk-circle2 sk-child"></div>
-		<div class="sk-circle3 sk-child"></div>
-		<div class="sk-circle4 sk-child"></div>
-		<div class="sk-circle5 sk-child"></div>
-		<div class="sk-circle6 sk-child"></div>
-		<div class="sk-circle7 sk-child"></div>
-		<div class="sk-circle8 sk-child"></div>
-		<div class="sk-circle9 sk-child"></div>
-		<div class="sk-circle10 sk-child"></div>
-		<div class="sk-circle11 sk-child"></div>
-		<div class="sk-circle12 sk-child"></div>
-	</div>
-</section>
+{% extends 'base.html' %} 
 
+
+{% block body %}
 <!-- home section -->
 <section id="home">
 	<div class="container">
