--- a/LearnIA/templates/index.html
+++ b/LearnIA/templates/index.html
@@ -12,7 +12,7 @@
 						data-wow-delay="0.8s">Learn IA</h1>
 					<h3 class="wow fadeInUp" data-wow-delay="0.6s"
 						style="font-weight: bold;">
-						<strong>Seleccione una de las opciones demostracion de </strong>Machine
+						<strong>Seleccione una de las opciones demostracion de </strong><br>Machine
 						Learning
 					</h3>
 					<a ref="#" data-toggle="modal" data-target="#modal1" type="button"
